--- a/pages/Media-tag.html
+++ b/pages/Media-tag.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>Image</h3>
-    <img src="assests/abstract-planet-space-purple-wallpaper-thumb.jpg" height="250px" width="400px" alt="Hello">
+    <img src="../assests/abstract-planet-space-purple-wallpaper-thumb.jpg" height="250px" width="400px" alt="Hello">
     <hr/>
     <h3>Video</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/V9uzgHuFd_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <hr/>
