--- a/AWT/pages/Form.html
+++ b/AWT/pages/Form.html
@@ -27,14 +27,18 @@
         </div>
         <input type="radio" name="Gender" style="margin-left: 30px;"><span>Male</span>
         <input type="radio" name="Gender"><span>Female</span>
+        <input type="radio" name="Gender"><span>Other</span>
         <br/>
         <div>
             Hobbies:
         </div>
         <input type="checkbox" name="Hobbies" id="Hobbies"/>Travelling <br/>
         <input type="checkbox" name="Hobbies" id="Hobbies"/>Reading <br/>
+        <input type="checkbox" name="Hobbies" id="Hobbies"/>Writing <br/>
         <input type="checkbox" name="Hobbies" id="Hobbies"/>Sports <br/>
         <input type="checkbox" name="Hobbies" id="Hobbies"/>Music <br/>
+        
+        
         <br/>
         <div>
             Address: 
@@ -65,10 +69,11 @@
                 <option value="a">IT-(A)</option>
                 <option value="b">IT-(B)</option>
                 <option value="c">IT-(C)</option>
+                <option value="c">IT-(D)</option>
             </select>
         </div>
         <br/>
-        <button type="submit">Submit now</button>
+        <button type="submit">Submit Here</button>
     </fieldset>
 </body>
 </html>
