--- a/AWT/pages/Link_list-tags.html
+++ b/AWT/pages/Link_list-tags.html
@@ -24,6 +24,26 @@
         <li>Three</li>
         <li>Four</li>
     </ul>
+    <ul style="list-style-type:circle;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+    <ul style="list-style-type:disc;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+    <ul style="list-style-type:square;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+        <ul style="list-style-type:none;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
     <hr/>
     <h3>Ordered List</h3>
 
