--- a/AWT/pages/Form.html
+++ b/AWT/pages/Form.html
@@ -25,18 +25,18 @@
         <div>
             Gender:
         </div>
-        <input type="radio" name="Gender" style="margin-left: 30px;"><span>Male</span>
-        <input type="radio" name="Gender"><span>Female</span>
-        <input type="radio" name="Gender"><span>Other</span>
+        <input type="radio" name="gender" style="margin-left: 30px;"><span>Male</span>
+        <input type="radio" name="gender"><span>Female</span>
+        <input type="radio" name="gender"><span>Other</span>
         <br/>
         <div>
             Hobbies:
         </div>
-        <input type="checkbox" name="Hobbies" id="Hobbies"/>Travelling <br/>
-        <input type="checkbox" name="Hobbies" id="Hobbies"/>Reading <br/>
-        <input type="checkbox" name="Hobbies" id="Hobbies"/>Writing <br/>
-        <input type="checkbox" name="Hobbies" id="Hobbies"/>Sports <br/>
-        <input type="checkbox" name="Hobbies" id="Hobbies"/>Music <br/>
+        <input type="checkbox" name="hobbies" id="Hobbies"/>Travelling <br/>
+        <input type="checkbox" name="hobbies" id="Hobbies"/>Reading <br/>
+        <input type="checkbox" name="hobbies" id="Hobbies"/>Writing <br/>
+        <input type="checkbox" name="hobbies" id="Hobbies"/>Sports <br/>
+        <input type="checkbox" name="hobbies" id="Hobbies"/>Music <br/>
         
         
         <br/>
@@ -70,10 +70,16 @@
                 <option value="b">IT-(B)</option>
                 <option value="c">IT-(C)</option>
                 <option value="c">IT-(D)</option>
+                <option value="a">IT-(E)</option>
+                <option value="b">IT-(F)</option>
+                <option value="c">IT-(G)</option>
+                <option value="c">IT-(H)</option>
             </select>
         </div>
         <br/>
         <button type="submit">Submit Here</button>
+        <button type="reset">Reset</button>
+
     </fieldset>
 </body>
 </html>
