--- a/AWT/pages/Media-tag.html
+++ b/AWT/pages/Media-tag.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <h3>Image</h3>
-    <img src="../assests/abstract-planet-space-purple-wallpaper-thumb.jpg" height="250px" width="400px" alt="Hello">
+    <img src="../assests/abstract-planet-space-purple-wallpaper-thumb.jpg" height="250px" width="400px" alt="space wallpaper">
     <hr/>
     <h3>Video</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/V9uzgHuFd_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <hr/>
+    <hr/>
     <h3>Map</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7462.320846978924!2d72.53283399753408!3d23.09146995913356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e833af6f39347%3A0xf1db9065daea7008!2sSilver%20Oak%20University!5e0!3m2!1sen!2sin!4v1656689234643!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></body>
+        
+<!-- Example : <source>  -->
+    
 </html>
