--- a/AWT/pages/Table.html
+++ b/AWT/pages/Table.html
@@ -197,6 +197,49 @@
 		</tr>
 	</table>
 
-
+<table border="3">
+    <tr>
+        <td  align="center">multiplication table <br>of 1</td>
+        <td  align="center">multiplication table <br>of 2</td>
+        <td  align="center">multiplication table <br>of 3</td>
+        <td  align="center">multiplication table <br>of 4</td>
+        <td  align="center">multiplication table <br>of 5</td>
+    </tr>
+    <tr>
+        <td  align="center">1x1=1</td>
+        <td  align="center">2x1=2</td>
+        <td   align="center">3x1=3</td>
+        <td  align="center">4x1=4</td>
+        <td   align="center">5x1=5</td>
+    </tr>
+    <tr>
+        <td  align="center">1x2=1</td>
+        <td align="center">2x2=4</td>
+        <td  align="center">3x2=6</td>
+        <td  align="center">4x2=8</td>
+        <td align="center">5x2=10</td>
+   </tr>
+    <tr>
+        <td  align="center">1x3=3</td>
+        <td align="center">2x3=6</td>
+        <td  align="center">3x3=9</td>
+        <td align="center">4x3=12</td>
+        <td align="center">5x3=15</td>
+    </tr>
+    <tr>
+        <td  align="center">1x4=4</td>
+        <td align="center">2x4=8</td>
+        <td align="center">3x4=12</td>
+        <td  align="center">4x4=16</td>
+        <td  align="center">5x4=20</td>
+    </tr>
+    <tr>
+        <td align="center">1x5=5</td>
+        <td align="center">2x5=10</td>
+        <td  align="center">3x5=15</td>
+        <td  align="center">4x5=20</td>
+        <td   align="center">5x5=25</td>
+    </tr>
+</table>
 </body>
 </html>
